# mac-smart-fans

./: Cargo.toml  INSTALL.md  README.md  install.sh
.github/workflows/: binary-release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/hid-sensors/: Cargo.toml
crates/hid-sensors/src/: lib.rs
crates/smc/: Cargo.toml
crates/smc/src/: lib.rs
