[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Marshall Ku <marshall@marshallku.com>"]
repository = "https://github.com/marshallku/mac-smart-fans"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
ctrlc = "3"
libc = "0.2"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

msf-core = { path = "crates/core" }
msf-hid = { path = "crates/hid-sensors" }
msf-smc = { path = "crates/smc" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
