[package]
name = "msf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "msf"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

msf-core.workspace = true
msf-hid.workspace = true
msf-smc.workspace = true
